--- a/style.css
+++ b/style.css
@@ -17,9 +17,22 @@ img {
 
 
 #layout {
-  width: 30vw;
+  /* width: 40%;
   height: auto;
+  display: block; */
+  grid-row: 2/6;
 }
+#storyboard {
+  grid-row: 2/3;
+  grid-column: 2/4;
+}
+
+#framing {
+  grid-row: 3/4;
+  grid-column: 2/4;
+}
+
+
 
 video {
   width: 100%;
@@ -235,4 +248,11 @@ h2 {
   nav ul a {
     font-size: 2rem;
   }
+
+  #documentation_section {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto auto;
+  gap: 1rem;
+
 }
